--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "php": "^7.1.3"
     },
     "require-dev": {
+        "phpcq/all-tasks": "^1.3"
     },
     "autoload": {
         "psr-4": {
