--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "source": "https://github.com/symfony-favicons-webpack-bundle"
     },
     "require": {
-        "php": "^7.1.3"
+        "php": "^7.1.3",
+        "symfony/http-kernel": "^3.3 || ^4.1",
     },
     "require-dev": {
         "phpcq/all-tasks": "^1.3"
