--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     },
     "require": {
         "php": "^7.1.3",
-        "symfony/dependency-injection": "^3.3 || ^4.1"
-        "symfony/http-kernel": "^3.3 || ^4.1",
+        "symfony/config": "^3.3 || ^4.1",
+        "symfony/dependency-injection": "^3.3 || ^4.1",
+        "symfony/http-kernel": "^3.3 || ^4.1"
     },
     "require-dev": {
         "phpcq/all-tasks": "^1.3"
