--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,11 @@
     },
     "require": {
         "php": "^7.1.3",
+        "psr/cache": "^1.0",
         "symfony/config": "^3.3 || ^4.1",
         "symfony/dependency-injection": "^3.3 || ^4.1",
-        "symfony/http-kernel": "^3.3 || ^4.1"
+        "symfony/http-kernel": "^3.3 || ^4.1",
+        "symfony/service-contracts": "^1.0 || ^2.0"
     },
     "require-dev": {
         "phpcq/all-tasks": "^1.3"
