--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,15 @@
     "require": {
         "php": "^7.1.3",
         "psr/cache": "^1.0",
+        "symfony/cache": "^3.3 || ^4.1",
         "symfony/config": "^3.3 || ^4.1",
         "symfony/dependency-injection": "^3.3 || ^4.1",
         "symfony/http-kernel": "^3.3 || ^4.1",
         "symfony/service-contracts": "^1.0 || ^2.0"
     },
     "require-dev": {
-        "phpcq/all-tasks": "^1.3"
+        "phpcq/all-tasks": "^1.3",
+        "symfony/framework-bundle": "^3.3 || ^4.1"
     },
     "autoload": {
         "psr-4": {
