--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require": {
         "php": "^7.1.3",
         "psr/cache": "^1.0",
+        "psr/container": "^1.0",
         "symfony/cache": "^3.3 || ^4.1",
         "symfony/config": "^3.3 || ^4.1",
         "symfony/dependency-injection": "^3.3 || ^4.1",
