--- a/src/Resources/config/favicons.yml
+++ b/src/Resources/config/favicons.yml
@@ -1,7 +1,7 @@
 services:
-  BlackForest\Symfony\WebpackEncoreBundle\Asset\FaviconsCollectionInterface:
-    '@BlackForest\Symfony\WebpackEncoreBundle\Asset\FaviconsCollection'
+  BlackForest\Symfony\WebpackEncoreBundle\Asset\FaviconsCollectionInterface: '@BlackForest\Symfony\WebpackEncoreBundle\Asset\FaviconsCollection'
 
   BlackForest\Symfony\WebpackEncoreBundle\Asset\FaviconsCollection:
+    public: false
     arguments:
       $faviconsCollection: ~ # Build in the extension.
