--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     },
     "require-dev": {
         "phpcq/all-tasks": "^1.3",
-        "symfony/framework-bundle": "^3.4.26 || ^4.4"
+        "symfony/framework-bundle": "^3.4.26 || ^4.4",
+        "symfony/twig-bundle": "^3.4.26 || ^4.4"
     },
     "autoload": {
         "psr-4": {
